GearsetPOC/force-app/main/default/objects/iLoyal_Transaction_History__c/iLoyal_Transaction_History__c.object-meta.xml
<CustomObject>
    <label>iLoyal Transaction History</label>
    <nameField>
        <label>iLoyal Transaction History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iLoyal Transaction Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>