GearsetPOC/force-app/main/default/objects/iLoyal_Transaction_History__c/fields/Actual_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Time__c</fullName>
    <label>Actual Date Time</label>
    <type>DateTime</type>
</CustomField>