GearsetPOC/force-app/main/default/objects/iLoyal_Transaction_History__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>123</length>
    <type>Text</type>
</CustomField>