GearsetPOC/force-app/main/default/objects/iLoyal_Transaction_History__c/fields/Loyalty_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Name__c</fullName>
    <label>Loyalty Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eurostar Frequent Traveller</fullName>
            </value>
            <value>
                <fullName>Eurostar Plus Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>