GearsetPOC/force-app/main/default/objects/iLoyal_Transaction_History__c/fields/Point_Type__c.field-meta.xml
<CustomField>
    <fullName>Point_Type__c</fullName>
    <label>Point Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Points for Redemption</fullName>
            </value>
            <value>
                <fullName>Affiliate Active Points</fullName>
            </value>
            <value>
                <fullName>Affiliate Pending Points</fullName>
            </value>
            <value>
                <fullName>Member Active Points for Redemption</fullName>
            </value>
            <value>
                <fullName>Member Pending Points</fullName>
            </value>
            <value>
                <fullName>Pending Points</fullName>
            </value>
            <value>
                <fullName>Special Bonus Points for Redemption</fullName>
            </value>
            <value>
                <fullName>Tier Points this MEMSHPYR</fullName>
            </value>
            <value>
                <fullName>Promotional Points for Redemption</fullName>
            </value>
            <value>
                <fullName>Reward Points for Redemption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>