GearsetPOC/force-app/main/default/objects/iLoyal_Transaction_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual_Date_Time__c</columns>
    <columns>Details__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Loyalty_Program_Name__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Points__c</columns>
    <columns>Point_Type__c</columns>
    <columns>Transaction_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>